--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   </head>
   <body>
     <p>My ToDos:</p>
-    <input type='text' id='newToDo' autofocus>
-    <button id='addToDo'>Add</button>
-    <ul id='todoList' style="list-style: none;">
+    <input type='text' class='addTodoInput' autofocus>
+    <button class='addTodoButton'>Add</button>
+    <ul class='todoList' style="list-style: none;">
     </ul>
     <script src="js/todo.js"></script>
   </body>
