add remove button. removes all crossed out items

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <button class='addTodoButton'>Add</button>
     <ul class='todoList' style="list-style: none;">
     </ul>
+    <button id="removeButton">Remove items</button>
     <script src="js/todo.js"></script>
   </body>
 </html>
