--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html>
   <head>
     <title>ToDo List</title>
-
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <p>My ToDos:</p>
     <input type='text' class='addTodoInput' autofocus>
     <button class='addTodoButton'>Add</button>
-    <ul class='todoList' style="list-style: none;">
-    </ul>
+    <div>
+      <ul class='todoList' style="list-style: none;">
+      </ul>
+    </div>
     <button id="removeButton">Remove items</button>
     <script src="js/todo.js"></script>
   </body>
